k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: employee-app
  labels:
    name: employee-api
