k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: employee-app
spec:
  type: NodePort
  selector:
    app: employee-api
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30007
